--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-page</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Performance: preconnect + display=swap -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
+
 </head>
 
 <body>
     <div class="bg-image">
         <!-- header -->
         <section class="section">
-             <header class="navbar">
-        <!-- Logo -->
-        <div>
-            <div class="logo">GREENHEART</div>
-            <div class="sub-logo">LEARNING PARTNERSHIP <span>♥</span></div>
-        </div>
+            <header class="navbar">
+                <!-- Logo -->
+                <div>
+                    <img src="images/vector:logo/logo.svg" alt="" srcset="">
+                </div>
 
-        <!-- Menu -->
-        <nav class="menu">
-            <a href="#">WHO WE ARE +</a>
-            <a href="#">ACADEMIES</a>
-            <a href="#">WORKING FOR US +</a>
-            <a href="#">IN ACTION</a>
-            <a href="#">POLICIES</a>
-            <a href="#" class="btn">GET IN TOUCH</a>
-        </nav>
-    </header>
+                <!-- Menu -->
+                <nav class="menu">
+                    <a href="#">WHO WE ARE +</a>
+                    <a href="#">ACADEMIES</a>
+                    <a href="#">WORKING FOR US +</a>
+                    <a href="#">IN ACTION</a>
+                    <a href="#">POLICIES</a>
+                    <a href="#" id="btns" >GET IN TOUCH</a>
+                </nav>
+            </header>
 
         </section>
 
@@ -95,8 +101,7 @@
     <section class="section">
         <dix class="partnership-banner">
             <div class="banner-content">
-                <h1>IN PARTNERSHIP WITH <span>GREEN <img
-                            src="images/vector:logo/cat.png" alt="logo"> HEART
+                <h1>IN PARTNERSHIP WITH <span>GREEN <img src="images/vector:logo/cat.png" alt="logo"> HEART
                         ❤️</span></h1>
                 <button>LEARN MORE</button>
             </div>
@@ -144,9 +149,9 @@
                 <!-- Right section -->
                 <div class="right">
                     <div class="key-info">
-                        <p>📞 01902 518981</p>
-                        <p>✉️ info@uwmat.co.uk</p>
-                        <p>📍 Albert Bradbeer, Primary Academy<br>
+                        <p><img src="images/vector:logo/Path 12290.svg" alt="" srcset=""> 01902 518981</p><br>
+                        <p> <img src="images/vector:logo/Path 12292.svg" alt="" srcset=""> info@uwmat.co.uk</p><br>
+                        <p> <img src="images/vector:logo/Path 1144.svg" alt="" srcset="">Albert Bradbeer, Primary Academy<br>
                             Turves Green, Birmingham, B31 4RD</p>
                     </div>
 
@@ -158,9 +163,9 @@
                     </div>
 
                     <div class="social-icons">
-                        <a href="#">f</a>
-                        <a href="#">🐦</a>
-                        <a href="#">📷</a>
+                        <a href="#"><img src="images/vector:logo/Facebook.svg" alt="" srcset=""></a>
+                        <a href="#"><img src="images/vector:logo/Path 1057.svg" alt="" srcset=""></a>
+                        <a href="#"><img src="images/vector:logo/instagram-logo (1).svg" alt="" srcset=""></a>
                     </div>
                 </div>
             </div>
