--- a/index.html
+++ b/index.html
@@ -7,50 +7,53 @@
     <title>Home-page</title>
     <link rel="stylesheet" href="css/main.css">
     <!-- Performance: preconnect + display=swap -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
 
 </head>
 
 <body>
     <div class="bg-image">
-        <!-- header -->
-        <section class="section">
-            <header class="navbar">
-                <!-- Logo -->
-                <div>
-                    <img src="images/vector:logo/logo.svg" alt="" srcset="">
-                </div>
+        <div class="container">
+            <!-- header -->
+            <section class="section">
+                <header class="navbar">
+                    <!-- Logo -->
+                    <div>
+                        <img src="images/vector:logo/logo.svg" alt="" srcset="">
+                    </div>
 
-                <!-- Menu -->
-                <nav class="menu">
-                    <a href="#">WHO WE ARE +</a>
-                    <a href="#">ACADEMIES</a>
-                    <a href="#">WORKING FOR US +</a>
-                    <a href="#">IN ACTION</a>
-                    <a href="#">POLICIES</a>
-                    <a href="#" id="btns" >GET IN TOUCH</a>
-                </nav>
-            </header>
+                    <!-- Menu -->
+                    <nav class="menu">
+                        <a href="#">WHO WE ARE +</a>
+                        <a href="#">ACADEMIES</a>
+                        <a href="#">WORKING FOR US +</a>
+                        <a href="#">IN ACTION</a>
+                        <a href="#">POLICIES</a>
+                        <a href="#" id="btns">GET IN TOUCH</a>
+                    </nav>
+                </header>
 
-        </section>
-
-
-        <div class="hero-content">
-            <h1>
-                LEAD <br>
-                SUPPORT <br>
-                DEVELOP
-            </h1>
-            <a href="#" class="btn">OUR ACADEMIES</a>
+            </section>
         </div>
-
+        <div class="container">
+            <div class="hero-content">
+                <h1>
+                    LEAD <br>
+                    SUPPORT <br>
+                    DEVELOP
+                </h1>
+                <a href="#" class="btn">OUR ACADEMIES</a>
+            </div>
+        </div>
     </div>
 
     <section class="section">
+        <div class="container">
         <div class="clippath">
 
         </div>
@@ -74,9 +77,11 @@
                 faucibus a. Praesent ultricies dui lectus, vitae vestibulum ligula.
             </p>
         </div>
+        </div>
     </section>
 
     <section class="section">
+        <div class="container">
         <div class="academy-section">
             <!-- Left: Content -->
             <div class="academy-content">
@@ -96,9 +101,11 @@
                 <img src="images/section/third.png" alt="Innovator Academy">
             </div>
         </div>
+        </div>
     </section>
 
     <section class="section">
+        <div class="container">
         <dix class="partnership-banner">
             <div class="banner-content">
                 <h1>IN PARTNERSHIP WITH <span>GREEN <img src="images/vector:logo/cat.png" alt="logo"> HEART
@@ -106,10 +113,12 @@
                 <button>LEARN MORE</button>
             </div>
             </div>
+            </div>
     </section>
 
 
     <section class="section">
+        <div class="container">
         <div class="action-section">
             <!-- Left: Image -->
             <div class="action-image">
@@ -129,6 +138,7 @@
                     vitae vestibulum ligula.
                 </p>
             </div>
+        </div>
         </div>
     </section>
 
@@ -151,7 +161,8 @@
                     <div class="key-info">
                         <p><img src="images/vector:logo/Path 12290.svg" alt="" srcset=""> 01902 518981</p><br>
                         <p> <img src="images/vector:logo/Path 12292.svg" alt="" srcset=""> info@uwmat.co.uk</p><br>
-                        <p> <img src="images/vector:logo/Path 1144.svg" alt="" srcset="">Albert Bradbeer, Primary Academy<br>
+                        <p> <img src="images/vector:logo/Path 1144.svg" alt="" srcset="">Albert Bradbeer, Primary
+                            Academy<br>
                             Turves Green, Birmingham, B31 4RD</p>
                     </div>
 
