--- a/trust.html
+++ b/trust.html
@@ -26,7 +26,7 @@
                     <a href="#">WORKING FOR US +</a>
                     <a href="#">IN ACTION</a>
                     <a href="#">POLICIES</a>
-                    <a href="#" id="btns">GET IN TOUCH</a>
+                    <a href="#" class="btn">GET IN TOUCH</a>
                 </nav>
             </header>
 
@@ -80,7 +80,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut facilisis dolor nunc, in rhoncus nunc
                         facilisis vitae. Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis curabitur.
                     </p>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#" class="btn">LEARN MORE</a>
                 </div>
 
             </div>
@@ -96,7 +96,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut facilisis dolor nunc, in rhoncus nunc
                         facilisis vitae. Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis curabitur.
                     </p>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#" class="btn">LEARN MORE</a>
                 </div>
                 <img src="images/section/what-we-do-2/amy-hirschi-JaoVGh5aJ3E-unsplash (1).png" alt="">
 
@@ -113,7 +113,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut facilisis dolor nunc, in rhoncus nunc
                         facilisis vitae. Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis curabitur.
                     </p>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#" class="btn">LEARN MORE</a>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
             <div class="black">
                 <div class="texts">
                     <h1><strong>WHAT TO DO </strong><br>MEET THE TEAM</h1>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#" class="btn">LEARN MORE</a>
                 </div>
                 <img src="images/section/BLACK/artem-kniaz-DqgMHzeio7g-unsplash.png" alt="">
             </div>
@@ -139,7 +139,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut facilisis dolor nunc, in rhoncus nunc
                         facilisis vitae. Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis curabitur.
                     </p>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#" class="btn">LEARN MORE</a>
                 </div>
 
 
@@ -149,7 +149,7 @@
 
 
     <footer>
-        <div class="container">
+        <div class="footer-container">
             <div class="threefooter">
                 <div class="footer1">
                     <h1>GET IN TOUCH TODAY</h1>
