--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <section class="section">
         <div class="container">
-        <div class="clippath">
+            <div class="clippath">
 
-        </div>
+            </div>
     </section>
 
     <section class="about-section">
@@ -82,82 +82,77 @@
 
     <section class="section">
         <div class="container">
-        <div class="academy-section">
-            <!-- Left: Content -->
-            <div class="academy-content">
-                <small>WHAT WE DO</small>
-                <h2><strong>EXPLORE</strong> <span>OUR INNOVATOR ACADEMY</span></h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Ut facilisis dolor nunc, in rhoncus nunc facilisis vitae.
-                    Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis
-                    curabitur. Phasellus ullamcorper magna turpis, vel suscipit lacus
-                    faucibus a. Praesent ultricies dui lectus, vitae vestibulum ligula.
-                </p>
-            </div>
+            <div class="academy-section">
+                <!-- Left: Content -->
+                <div class="academy-content">
+                    <small>WHAT WE DO</small>
+                    <h2><strong>EXPLORE</strong> <span>OUR INNOVATOR ACADEMY</span></h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut facilisis dolor nunc, in rhoncus nunc facilisis vitae.
+                        Etiam vel lectus maximus, rhoncus quam sit amet, elementum turpis
+                        curabitur. Phasellus ullamcorper magna turpis, vel suscipit lacus
+                        faucibus a. Praesent ultricies dui lectus, vitae vestibulum ligula.
+                    </p>
+                </div>
 
-            <!-- Right: Image -->
-            <div class="academy-image">
-                <img src="images/section/third.png" alt="Innovator Academy">
+                <!-- Right: Image -->
+                <div class="academy-image">
+                    <img src="images/section/third.png" alt="Innovator Academy">
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
     <section class="section">
         <div class="container">
-        <dix class="partnership-banner">
-            <div class="banner-content">
-                <h1>IN PARTNERSHIP WITH <span>GREEN <img src="images/vector:logo/cat.png" alt="logo"> HEART
-                        ❤️</span></h1>
-                <button>LEARN MORE</button>
-            </div>
-            </div>
-            </div>
+            <dix class="partnership-banner">
+                <div class="banner-content">
+                    <h1>IN PARTNERSHIP WITH <span>GREEN <img src="images/vector:logo/cat.png" alt="logo"> HEART
+                            ❤️</span></h1>
+                    <button>LEARN MORE</button>
+                </div>
+        </div>
+        </div>
     </section>
 
 
     <section class="section">
         <div class="container">
-        <div class="action-section">
-            <!-- Left: Image -->
-            <div class="action-image">
-                <img src="images/section/fifth.png" alt="Greenheart in Action">
-            </div>
+            <div class="action-section">
+                <!-- Left: Image -->
+                <div class="action-image">
+                    <img src="images/section/fifth.png" alt="Greenheart in Action">
+                </div>
 
-            <!-- Right: Content -->
-            <div class="action-content">
-                <small>IN ACTION</small>
-                <h2><strong>GREENHEART</strong> <span>IN ACTION</span></h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Ut facilisis dolor nunc, in rhoncus nunc facilisis vitae.
-                    Etiam vel lectus maximus, rhoncus quam sit amet, elementum
-                    turpis curabitur. Phasellus ullamcorper magna turpis, vel
-                    suscipit lacus faucibus a. Praesent ultricies dui lectus,
-                    vitae vestibulum ligula.
-                </p>
+                <!-- Right: Content -->
+                <div class="action-content">
+                    <small>IN ACTION</small>
+                    <h2><strong>GREENHEART</strong> <span>IN ACTION</span></h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut facilisis dolor nunc, in rhoncus nunc facilisis vitae.
+                        Etiam vel lectus maximus, rhoncus quam sit amet, elementum
+                        turpis curabitur. Phasellus ullamcorper magna turpis, vel
+                        suscipit lacus faucibus a. Praesent ultricies dui lectus,
+                        vitae vestibulum ligula.
+                    </p>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
     <!-- footer -->
-    <section class="section">
-        <div class="footer">
-            <div class="container">
-                <!-- Left section -->
-                <div class="left">
-                    <h1>GET IN TOUCH <span>TODAY</span></h1>
-                    <p>FIND OUT MORE ABOUT JOINING OUR PARTNERSHIP</p>
-                    <div class="email-box">
-                        <input type="email" placeholder="Enter email address...">
-                        <button>&#10148;</button>
-                    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="threefooter">
+                <div class="footer1">
+                    <h1>GET IN TOUCH TODAY</h1>
+                    <h4>FIND OUR MORE ABOUT JOINING OUR PARTNERSHIP</h4>
+                    <form action=""><input type="email"></form>
                 </div>
-
-                <!-- Right section -->
-                <div class="right">
+                <div class="footer2">
+                    <h6>KEY INFORMATION</h6>
                     <div class="key-info">
                         <p><img src="images/vector:logo/Path 12290.svg" alt="" srcset=""> 01902 518981</p><br>
                         <p> <img src="images/vector:logo/Path 12292.svg" alt="" srcset=""> info@uwmat.co.uk</p><br>
@@ -165,7 +160,8 @@
                             Academy<br>
                             Turves Green, Birmingham, B31 4RD</p>
                     </div>
-
+                </div>
+                <div class="footer3">
                     <div class="useful-links">
                         <h4>USEFUL LINKS</h4>
                         <a href="#">Policies</a>
@@ -181,20 +177,19 @@
                 </div>
             </div>
 
-            <footer>
+            <div class="partners">
                 <p>IN PARTNERSHIP WITH</p>
-                <div class="partners">
+                <div class="partnerslogo">
                     <!-- Replace with actual logos -->
                     <img src="images/vector:logo/Image 2/Image 2.png" alt="Logo1">
                     <img src="images/vector:logo/Image 4/Image 4.png" alt="Logo2">
                     <img src="images/vector:logo/Image 5/Image 5.png" alt="Logo3">
                     <img src="images/vector:logo/Image 6/Image 6.png" alt="Logo6">
                     <img src="images/vector:logo/Image 7/Image 7.png" alt="Logo7">
-                    <img src="images/vector:logo/Image 1/Image 1.png" alt="Logo1">
                 </div>
-            </footer>
+            </div>
         </div>
-    </section>
+    </footer>
 </body>
 
 </html>
